<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_turn_on"
        android:layout_centerHorizontal="true"
        android:src="@drawable/bluetooth"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txt_bluetooth_desc"
        android:layout_width="wrap_content"
        android:padding="2dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_centerInParent="true"
        android:text="@string/bluetooth_desc"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txt_turn_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:padding="10dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_above="@+id/txt_bluetooth_desc"
        android:layout_centerHorizontal="true"
        android:text="@string/bluetooth_off"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/ll_turn_on_bluetooth"
        style="@style/AppTheme.Button"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/turn_on_bluetooth"/>

</RelativeLayout>